feat: merge lista lobinhos e adotar lobinho

--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <a href="/">Nossos Lobinhos</a>
-        <img src="assets/lobo.svg">
+        <img src="/assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
     <main>
         <div id="container">
             <div class="title">
-                <img class='image' src="assets/Mask Group.png">
+                <img class='image' src="/assets/Mask Group.png">
                 <div class="adote">
                     <h1>Adote o(a) NomeDoLobo</h1>
                     <p>ID: 123456</p>
@@ -57,15 +57,15 @@
             <div class="secao1-2-footer">
                 <div class="contato">
                     <div class="inf-contato">
-                        <img src="assets/localizacao.svg" alt="Localização">
+                        <img src="/assets/localizacao.svg" alt="Localização">
                         <p>Av. Milton Tavares de Souza, s/n - Sala 115 B - Boa Viagem, Niterói - RJ, 24210-315</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assets/tel.svg" alt="Telefone">
+                        <img src="/assets/tel.svg" alt="Telefone">
                         <p>(99) 99999-9999</p>
                     </div>
                     <div class="inf-contato">
-                        <img src="assets/envelope.svg" alt="Email">
+                        <img src="/assets/envelope.svg" alt="Email">
                         <p>salve-lobos@lobINhos.com</p>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
         </div>
         <div class="secao2-footer">
             <p>Desenvolvido com</p>
-            <img src="assets/paws.png" alt="Patas">
+            <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
    
