feat: personalização página de adoção

--- a/adicionar-lobo/index.html
+++ b/adicionar-lobo/index.html
@@ -14,7 +14,7 @@
     <header>
         <a href="/">Nossos Lobinhos</a>
         <img src="/assets/lobo.svg">
-        <a href="/">Quem Somos</a>
+        <a href="/quem-somos">Quem Somos</a>
     </header>
     <main>
         <section class="box-adocao">
