--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -15,17 +15,11 @@
     <header>
         <a href="/">Nossos Lobinhos</a>
         <img src="/assets/lobo.svg">
-        <a href="/">Quem Somos</a>
+        <a href="/quem-somos">Quem Somos</a>
     </header>
     <main>
         <div id="container">
-            <div class="title">
-                <img class='image' src="/assets/Mask Group.png">
-                <div class="adote">
-                    <h1>Adote o(a) NomeDoLobo</h1>
-                    <p>ID: 123456</p>
-                </div>
-            </div>
+            <div class="title"></div>
             <div class="content">
                 <div class="input_container">
                     <div class="input_container_1">
