--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn-quem-somos">Quem Somos</button>
+                    <button class="btn-quem-somos" onclick="window.location.href='/quem-somos';">Quem Somos</button>
                 </div>
             </div>
         </div>
