--- a/ListaDeLobinhos/index.html
+++ b/ListaDeLobinhos/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lisa de Lobinhos</title>
+    <title>Lista de Lobinhos</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Darker+Grotesque:wght@300..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,9 +18,17 @@
         <img src="assets/lobo.svg">
         <a href="/">Quem Somos</a>
     </header>
+    <section id="lobos_search">
+        <div class="_input_search_lobo">
+            <img src="./assets/search_lobos.svg" alt="">
+            <input type="text">
+        </div>
+        <button>
+            + LOBO
+        </button>
+
+    </section>
     <main class="container">
-        
-        
     </main>
     <footer>
         <div class="secao1-footer">
