feat: adc links do header

--- a/show-lobinho/index.html
+++ b/show-lobinho/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Nossos Lobinhos</a>
+        <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
         <img src="/assets/lobo.svg">
         <a href="/quem-somos">Quem Somos</a>
     </header>
