--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Nossos Lobinhos</a>
+        <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
         <img src="/assets/lobo.svg">
         <a href="/quem-somos">Quem Somos</a>
     </header>
