--- a/home-page/indexHP.html
+++ b/home-page/indexHP.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="cabeca">
-            <a href="/">Nossos Lobinhos</a>
+            <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
             <img src="/assets/lobo.svg">
-            <a href="/">Quem somos</a>
+            <a href="/quem-somos">Quem somos</a>
         </div>
     </header>
 
