--- a/home-page/indexHP.html
+++ b/home-page/indexHP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="Reset.css">
+    <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="styleHP.css">
 </head>
 <body>
