feat: adc links do header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <div class="cabeca">
-            <a href="/">Nossos Lobinhos</a>
+            <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
             <img src="/assets/lobo.svg">
-            <a href="/">Quem somos</a>
+            <a href="/quem-somos">Quem somos</a>
         </div>
     </header>
 
