--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem somos</title>
+    <title>Quem Somos</title>
+    <link rel="icon" type="image/x-icon" href="/assets/lobo.svg">
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
