feat: adição caminho inicilizador de localstorage

--- a/adicionar-lobo/index.html
+++ b/adicionar-lobo/index.html
@@ -71,6 +71,7 @@
             <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
+    <script src="/script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
