--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -75,6 +75,7 @@
         </div>
     </footer>
    
+    <script src="/script.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
