--- a/quem-somos/index.html
+++ b/quem-somos/index.html
@@ -56,6 +56,7 @@
             <img src="/assets/paws.png" alt="Patas">
         </div>
     </footer>
+    <script src="/script.js"></script>
     
 </body>
 </html>
