--- a/adotar-lobo/index.html
+++ b/adotar-lobo/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-        <button class="adotarBtn">
+        <button id="adotarBtn">
             Adotar
         </button>
     </main>
