feat: paginação lista lobos

--- a/lista-de-lobinhos/index.html
+++ b/lista-de-lobinhos/index.html
@@ -107,11 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mudar-pag">
-                <button class="voltar"> << </button>
-                <p>1 2 3 4 5...</p>
-                <button class="avançar"> >> </button>
-            </div>
+            <div class="paginacao" id="controle-paginacao"></div>
         </div>
     </main>
     <footer>
