feat: transf. img da header em link p/ homepage

--- a/adicionar-lobo/index.html
+++ b/adicionar-lobo/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
-        <img src="/assets/lobo.svg">
+        <a href="/index.html"><img src="/assets/lobo.svg"></a>
         <a href="/quem-somos">Quem Somos</a>
     </header>
     <main>
