--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="cabeca">
             <a href="/lista-de-lobinhos">Nossos Lobinhos</a>
-            <img src="/assets/lobo.svg">
+            <a href="/index.html"><img src="/assets/lobo.svg"></a>
             <a href="/quem-somos">Quem somos</a>
         </div>
     </header>
