feat: alteração de botoes lista de lobos

--- a/lista-de-lobinhos/index.html
+++ b/lista-de-lobinhos/index.html
@@ -22,7 +22,8 @@
             <div class="input-box">
                 <div class="pesquisar-lobo">
                     <input type="text" class="procurar-lobo">
-                    <button class="btn-procurar">+ Lobo</button>
+                    <button class="btn-procurar"><img src="/assets/lupa.svg"></button>
+                    <button class="btn-adicionar" onclick="window.location.href='/adicionar-lobo';">+ Lobo</button>
                 </div>
                 <div class="checkbox">
                     <input type="checkbox" class="lobosAdotados">
