fix: correções finais

--- a/lista-de-lobinhos/index.html
+++ b/lista-de-lobinhos/index.html
@@ -30,84 +30,7 @@
                     <p>Ver lobinhos adotados</p>
                 </div>
             </div>
-            <div class="show-lobos">
-                <div class="lobo lobo-esquerda">
-                    <div class="secao-1">
-                        <img class="icone-lobo" src="${itensPagina[0].imagem}">
-                    </div>
-                    <div class="secao-2">
-                        <div class="secao-2-1">
-                            <div class="secao-2-1-1">
-                                <h2>${itensPagina[0].nome}</h2>
-                                <p>Idade: ${itensPagina[0].idade} anos</p>
-                            </div>
-                            <div class="secao-2-1-2">
-                                <button>Adotar</button>
-                            </div>
-                        </div>
-                        <div class="secao-2-2">
-                            <p>${itensPagina[0].descricao}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="lobo lobo-direita">
-                    <div class="secao-1">
-                        <img class="icone-lobo" src="https://media.istockphoto.com/id/177794699/pt/foto/lobo-cinzento-retrato.jpg?s=612x612&w=0&k=20&c=iZHohTbptMVPjsS2l08tCX_LLoGVVyowGYUg4sI1yc4=">
-                    </div>
-                    <div class="secao-2">
-                        <div class="secao-2-1">
-                            <div class="secao-2-1-1">
-                                <h2>Nome do Lobo</h2>
-                                <p>Idade: XX anos</p>
-                            </div>
-                            <div class="secao-2-1-2">
-                                <button>Adotar</button>
-                            </div>
-                        </div>
-                        <div class="secao-2-2">
-                            <p>Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="lobo lobo-esquerda">
-                    <div class="secao-1">
-                        <img class="icone-lobo" src="https://media.istockphoto.com/id/177794699/pt/foto/lobo-cinzento-retrato.jpg?s=612x612&w=0&k=20&c=iZHohTbptMVPjsS2l08tCX_LLoGVVyowGYUg4sI1yc4=">
-                    </div>
-                    <div class="secao-2">
-                        <div class="secao-2-1">
-                            <div class="secao-2-1-1">
-                                <h2>Nome do Lobo</h2>
-                                <p>Idade: XX anos</p>
-                            </div>
-                            <div class="secao-2-1-2">
-                                <button>Adotar</button>
-                            </div>
-                        </div>
-                        <div class="secao-2-2">
-                            <p>Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="lobo lobo-direita">
-                    <div class="secao-1">
-                        <img class="icone-lobo" src="https://media.istockphoto.com/id/177794699/pt/foto/lobo-cinzento-retrato.jpg?s=612x612&w=0&k=20&c=iZHohTbptMVPjsS2l08tCX_LLoGVVyowGYUg4sI1yc4=">
-                    </div>
-                    <div class="secao-2">
-                        <div class="secao-2-1">
-                            <div class="secao-2-1-1">
-                                <h2>Nome do Lobo</h2>
-                                <p>Idade: XX anos</p>
-                            </div>
-                            <div class="secao-2-1-2">
-                                <button>Adotar</button>
-                            </div>
-                        </div>
-                        <div class="secao-2-2">
-                            <p>Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas. Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.Não obstante, o surgimento do comércio virtual faz parte de um processo de gerenciamento do levantamento das variáveis envolvidas.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="show-lobos"></div>
             <div class="paginacao" id="controle-paginacao"></div>
         </div>
     </main>
